--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.1",
     "@supabase/supabase-js": "^2.91.0",
     "dotenv": "^17.2.3",
+    "firebase": "^12.8.0",
     "framer-motion": "^12.29.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
@@ -42,7 +43,7 @@
     "prettier": "^3.8.1",
     "ts-jest": "^29.4.6",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.53.1",
+    "typescript-eslint": "^8.54.0",
     "vite": "^7.2.4"
   }
 }
